--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -2,13 +2,13 @@
 // @include fontface('FONT_NAME', 'assets/fonts/', 'FONT_FAMILY');
 
 // Structure
-$pageWidth: 1000px;
+$page-width: 1000px;
 
 // Text Selection
-$selectionColor: orange;
+$selection-color: #ffa500;
 
 // Links
-$linkColor: red;
-$linkHoverColor: blue;
+$link-color: #f00;
+$link-hover-color: #00f;
 
 // Other
