--- a/scss/partials/_grid.scss
+++ b/scss/partials/_grid.scss
@@ -1,7 +1,7 @@
 $pad: 20px;
 
 .grid {
-	margin: 0 0 $pad 0;
+  margin: 0 0 $pad 0;
 	@include microclearfix();
 }
 
@@ -20,6 +20,7 @@ $pad: 20px;
 .col-1-3 {
 	width: 33.33%;
 }
+
 .col-2-3 {
 	width: 66.66%;
 }
@@ -27,6 +28,7 @@ $pad: 20px;
 .col-1-4 {
 	width: 25%;
 }
+
 .col-3-4 {
 	width: 75%;
 }
@@ -34,6 +36,7 @@ $pad: 20px;
 .col-1-8 {
 	width: 12.5%;
 }
+
 .col-7-8 {
 	width: 87.5%;
 }
@@ -42,9 +45,10 @@ $pad: 20px;
 	padding: $pad;
 }
 
-/* Opt-in outside padding */
+// Opt-in outside padding
 .grid-pad {
 	padding: $pad 0 $pad $pad;
+
 	[class*='col-']:last-of-type {
 		padding-right: $pad;
 	}
