Made to suite my needs
I did some organization within the template and scss folders to suite
my way of styling and keeping the look more simple when looking for
templates. Did a optimization of the icons - that I am not going to use
any way.

--- a/scss/base/_global.scss
+++ b/scss/base/_global.scss
@@ -100,14 +100,15 @@ textarea {
 // Box Sizing
 //
 // Set that shit to border-box, yo. And fix those pesky pseudo elements
-
+// http: //www.paulirish.com/2012/box-sizing-border-box-ftw/
 // ==========================================================================
 //   Border-box all the things!
 // ==========================================================================
-*,
-:before,
-:after {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
+
+* {
+  @include box-sizing(border-box);
+
+  #admin-toolbar & {
+    @include box-sizing(content-box);
+  }
 }
