--- a/scss/base/_helpers.scss
+++ b/scss/base/_helpers.scss
@@ -40,7 +40,8 @@
 
 // Hide only visually, but have it available for screenreaders: h5bp.com/v
 
-.visuallyhidden {
+.visuallyhidden,
+.element-invisible {
   border: 0;
   clip: rect(0 0 0 0);
   height: 1px;
