--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,6 +15,7 @@
 // Reset, Variables, Mixins, Etc
 // DO NOT EDIT ORDER OF FILES
 @import 'base/mixins';
+@import 'base/mq';
 @import 'base/variables';
 @import 'base/normalize';
 
