Drupal and Page Speed
Removed tabs for 2 spaces as in Drupal specs.
Prepared for loading a inline stylesheet then style and at desktop
breakpoint also a desktop stylesheet. To better Google Page Speed
performance.

--- a/scss/partials/_posts.scss
+++ b/scss/partials/_posts.scss
@@ -6,7 +6,7 @@ article {
 }
 
 blockquote {
-  background: url('assets/images/icons/blockquote.png') no-repeat 0 12px;
+  background: url('images/icons/blockquote.png') no-repeat 0 12px;
   padding: 10px 20px 10px 50px;
   font-style: italic;
 }
