--- a/scss/desktop.scss
+++ b/scss/desktop.scss
@@ -23,12 +23,7 @@
 // The layout
 
 // Page and Site Styles
-@import 'partials/page';
-@import 'partials/posts';
-@import 'partials/blocks';
-@import 'partials/search';
-@import 'partials/forms';
+@import 'partials/page_desktop';
 
 // Helper Classes, Print, Etc
-@import 'base/helpers';
-
+@import 'partials/print';
