--- a/scss/inline.scss
+++ b/scss/inline.scss
@@ -17,18 +17,16 @@
 @import 'base/mixins';
 @import 'base/mq';
 @import 'base/variables';
+@import 'base/normalize';
 
 // Globals
+@import 'base/global';
 
 // The layout
+@import 'layout/grid';
+@import 'layout/typography';
 
 // Page and Site Styles
-@import 'partials/page';
-@import 'partials/posts';
-@import 'partials/blocks';
-@import 'partials/search';
-@import 'partials/forms';
+@import 'partials/page_inline';
 
 // Helper Classes, Print, Etc
-@import 'base/helpers';
-
